# tman_practice

./: .gitignore  CMakeLists.txt  README.md
aot/: CMakeLists.txt
aot/src/: main_aot.cpp
common/: CMakeLists.txt
common/include/: qnn_backend.h  qnn_backendcache.h  qnn_context.h  qnn_device.h  qnn_dynload.h  qnn_graph.h  qnn_mem_manager.h  qnn_platform.h  qnn_profiler.h  qnn_sharedbuffer.h
common/src/: qnn_backend.cpp  qnn_backendcache.cpp  qnn_context.cpp  qnn_device.cpp  qnn_dynload.cpp  qnn_graph.cpp  qnn_graph_config.cpp  qnn_mem_manager.cpp  qnn_platform.cpp  qnn_profiler.cpp  qnn_sharedbuffer.cpp
include/: qnn_context.h  qnn_device.h  qnn_graph.h  qnn_graph_config.h  qnn_graph_runtime.h  qnn_log.h  qnn_option.h  qnn_tensor.h
kernel/cpp/: build.sh  dequantize_weights.h  hexagon_simulator.h  test_dequantize_weights.cpp
kernel/python/: dequantize_weights.py  export_preprocessed_data.py  hexagon.py  preprocess_weights.py  utils.py
runtime/: CMakeLists.txt
runtime/src/: main_run.cpp
script/: build.sh  compile.sh  install_env.sh  run.sh
src/: main.cpp  qnn_context.cpp  qnn_device.cpp  qnn_graph.cpp  qnn_platform.cpp  qnn_tensor.cpp
